--- a/job_application_page.html
+++ b/job_application_page.html
@@ -18,7 +18,7 @@
             --light: #f9fafb;
             --dark: #1f2937;
             --gray: #6b7280;
-        } 
+        }
 
         body {
             font-family: 'Tajawal', sans-serif;
@@ -105,8 +105,7 @@
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card" id="step1">
             <h2 class="text-lg font-bold mb-4">الخطوة 1: معلومات شخصية</h2>
-            <form id="jobForm">
-                <div class="mb-4">
+            <form id="jobFormStep1"> <div class="mb-4">
                     <label for="profileImage" class="block text-sm font-medium text-gray-700">رفع صورة الملف الشخصي</label>
                     <input type="file" id="profileImage" accept="image/*" 
                            class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
@@ -123,7 +122,7 @@
                            class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
                 </div>
 
-                <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="nextStep(1)">
+                <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="validateAndNextStep(1)">
                     التالي
                 </button>
             </form>
@@ -131,99 +130,107 @@
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step2">
             <h2 class="text-lg font-bold mb-4">الخطوة 2: تفاصيل الموقع والخبرة</h2>
-            <div class="mb-4">
-                <label for="jobLocation" class="block text-sm font-medium text-gray-700">الموقع</label>
-                <input type="text" id="jobLocation" placeholder="أدخل الموقع" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
+            <form id="jobFormStep2">
+                <div class="mb-4">
+                    <label for="jobLocation" class="block text-sm font-medium text-gray-700">الموقع</label>
+                    <input type="text" id="jobLocation" placeholder="أدخل الموقع" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
 
-            <div class="mb-4">
-                <label for="experienceYears" class="block text-sm font-medium text-gray-700">عدد سنوات الخبرة</label>
-                <input type="number" id="experienceYears" placeholder="كم سنة عملت في المجال" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
+                <div class="mb-4">
+                    <label for="experienceYears" class="block text-sm font-medium text-gray-700">عدد سنوات الخبرة</label>
+                    <input type="number" id="experienceYears" placeholder="كم سنة عملت في المجال" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
 
-            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(2)">
-                السابق
-            </button>
-            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="nextStep(2)">
-                التالي
-            </button>
+                <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(2)">
+                    السابق
+                </button>
+                <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="validateAndNextStep(2)">
+                    التالي
+                </button>
+            </form>
         </div>
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step3">
             <h2 class="text-lg font-bold mb-4">الخطوة 3: المهارات</h2>
-            <div class="mb-4">
-                <label for="skill1" class="block text-sm font-medium text-gray-700">المهارة 1</label>
-                <input type="text" id="skill1" placeholder="أدخل المهارة" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
-            <div class="mb-4">
-                <label for="skill2" class="block text-sm font-medium text-gray-700">المهارة 2</label>
-                <input type="text" id="skill2" placeholder="أدخل المهارة" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
-            <div class="mb-4">
-                <label for="skill3" class="block text-sm font-medium text-gray-700">المهارة 3</label>
-                <input type="text" id="skill3" placeholder="أدخل المهارة" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
-            <div class="mb-4">
-                <label for="skill4" class="block text-sm font-medium text-gray-700">المهارة 4</label>
-                <input type="text" id="skill4" placeholder="أدخل المهارة" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
-            <div class="mb-4">
-                <label for="skill5" class="block text-sm font-medium text-gray-700">المهارة 5</label>
-                <input type="text" id="skill5" placeholder="أدخل المهارة" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
-            <div class="error-message hidden" id="skillError">يرجى إدخال مهارات تتعلق بالوظيفة المحددة.</div>
+            <form id="jobFormStep3">
+                <div class="mb-4">
+                    <label for="skill1" class="block text-sm font-medium text-gray-700">المهارة 1</label>
+                    <input type="text" id="skill1" placeholder="أدخل المهارة" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="mb-4">
+                    <label for="skill2" class="block text-sm font-medium text-gray-700">المهارة 2</label>
+                    <input type="text" id="skill2" placeholder="أدخل المهارة" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="mb-4">
+                    <label for="skill3" class="block text-sm font-medium text-gray-700">المهارة 3</label>
+                    <input type="text" id="skill3" placeholder="أدخل المهارة" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="mb-4">
+                    <label for="skill4" class="block text-sm font-medium text-gray-700">المهارة 4</label>
+                    <input type="text" id="skill4" placeholder="أدخل المهارة" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="mb-4">
+                    <label for="skill5" class="block text-sm font-medium text-gray-700">المهارة 5</label>
+                    <input type="text" id="skill5" placeholder="أدخل المهارة" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="error-message hidden" id="skillError">يرجى إدخال مهارات تتعلق بالوظيفة المحددة.</div>
 
-            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(3)">
-                السابق
-            </button>
-            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="validateSkills()">
-                التالي
-            </button>
+                <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(3)">
+                    السابق
+                </button>
+                <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="validateSkills()">
+                    التالي
+                </button>
+            </form>
         </div>
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step4">
             <h2 class="text-lg font-bold mb-4">الخطوة 4: الأعمال السابقة</h2>
-            <div class="mb-4">
-                <label for="previousWorks" class="block text-sm font-medium text-gray-700">رفع صور الأعمال السابقة</label>
-                <input type="file" id="previousWorks" multiple 
-                       class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
+            <form id="jobFormStep4">
+                <div class="mb-4">
+                    <label for="previousWorks" class="block text-sm font-medium text-gray-700">رفع صور الأعمال السابقة</label>
+                    <input type="file" id="previousWorks" multiple 
+                           class="w-full border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
 
-            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(4)">
-                السابق
-            </button>
-            <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="nextStep(4)">
-                التالي
-            </button>
+                <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(4)">
+                    السابق
+                </button>
+                <button type="button" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="validateAndNextStep(4)">
+                    التالي
+                </button>
+            </form>
         </div>
 
         <div class="bg-white rounded-xl shadow-sm p-6 mb-6 form-card hidden" id="step5">
             <h2 class="text-lg font-bold mb-4">الخطوة 5: تأكيد المعلومات</h2>
             <p class="text-gray-700 mb-4">يرجى مراجعة المعلومات المدخلة بعناية قبل الإرسال. تأكد من أن جميع المعلومات صحيحة ودقيقة لضمان المصداقية.</p>
-            <div class="mb-4">
-                <label for="salaryFrom" class="block text-sm font-medium text-gray-700">السعر من (جنيه)</label>
-                <input type="number" id="salaryFrom" placeholder="أدخل السعر الأدنى" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
-            <div class="mb-4">
-                <label for="salaryTo" class="block text-sm font-medium text-gray-700">إلى (جنيه)</label>
-                <input type="number" id="salaryTo" placeholder="أدخل السعر الأعلى" 
-                       class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
-            </div>
+            <form id="jobFormStep5">
+                <div class="mb-4">
+                    <label for="salaryFrom" class="block text-sm font-medium text-gray-700">السعر من (جنيه)</label>
+                    <input type="number" id="salaryFrom" placeholder="أدخل السعر الأدنى" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
+                <div class="mb-4">
+                    <label for="salaryTo" class="block text-sm font-medium text-gray-700">إلى (جنيه)</label>
+                    <input type="number" id="salaryTo" placeholder="أدخل السعر الأعلى" 
+                           class="w-full pr-12 pl-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
+                </div>
 
-            <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(5)">
-                السابق
-            </button>
-            <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="submitForm()">
-                إرسال
-            </button>
+                <button type="button" class="px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300" onclick="prevStep(5)">
+                    السابق
+                </button>
+                <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700" onclick="submitForm()">
+                    إرسال
+                </button>
+            </form>
         </div>
     </div>
 
@@ -251,8 +258,20 @@
         const db = getFirestore(app); // Get Firestore instance
         const storage = getStorage(app); // Get Storage instance
 
-
         let currentStep = 1;
+
+        // دالة جديدة للتحقق من الخطوة قبل الانتقال
+        function validateAndNextStep(stepNum) {
+            const currentForm = document.getElementById(`jobFormStep${stepNum}`);
+            // التحقق من صحة الحقول في النموذج الحالي
+            if (currentForm.checkValidity()) {
+                // إذا كانت الحقول صالحة، انتقل إلى الخطوة التالية
+                nextStep(stepNum);
+            } else {
+                // إذا كانت هناك حقول غير صالحة، قم بتفعيل رسائل خطأ المتصفح الافتراضية
+                currentForm.reportValidity();
+            }
+        }
 
         function nextStep(step) {
             document.getElementById(`step${step}`).classList.add('hidden');
@@ -288,6 +307,13 @@
                 document.getElementById('skill5')
             ];
             
+            // إضافة تحقق من صحة النموذج لهذه الخطوة أيضاً
+            const currentForm = document.getElementById(`jobFormStep3`);
+            if (!currentForm.checkValidity()) {
+                currentForm.reportValidity();
+                return;
+            }
+
             for (let input of skillInputs) {
                 if (!input.value.trim()) {
                     document.getElementById('skillError').textContent = 'يرجى إدخال جميع المهارات المطلوبة';
@@ -301,13 +327,16 @@
             const minRelatedSkills = 2; 
             
             for (let skill of skills) {
-                if (skill.includes(jobTitle) || jobTitle.includes(skill)) {
+                // تحسين بسيط للتحقق من الصلة: يمكن أن يكون جزء من الوظيفة أو العكس
+                if (jobTitle.includes(skill) || skill.includes(jobTitle) || 
+                    (jobTitle.split(' ').some(word => skill.includes(word))) ||
+                    (skill.split(' ').some(word => jobTitle.includes(word)))) {
                     relevantSkillsCount++;
                 }
             }
 
             if (relevantSkillsCount < minRelatedSkills) {
-                document.getElementById('skillError').textContent = `يجب أن يكون لديك ${minRelatedSkills} مهارات على الأقل ذات صلة بالوظيفة`;
+                document.getElementById('skillError').textContent = `يجب أن يكون لديك ${minRelatedSkills} مهارات على الأقل ذات صلة بالوظيفة المدخلة.`;
                 document.getElementById('skillError').classList.remove('hidden');
             } else {
                 document.getElementById('skillError').classList.add('hidden');
@@ -316,6 +345,13 @@
         }
 
         async function submitForm() {
+            // التحقق من صحة الخطوة الأخيرة قبل الإرسال
+            const currentForm = document.getElementById(`jobFormStep5`);
+            if (!currentForm.checkValidity()) {
+                currentForm.reportValidity();
+                return;
+            }
+
             const profileImageFile = document.getElementById('profileImage').files[0];
             const fullName = document.getElementById('fullName').value;
             const jobTitle = document.getElementById('jobTitle').value;
@@ -330,7 +366,8 @@
             const salaryFrom = document.getElementById('salaryFrom').value;
             const salaryTo = document.getElementById('salaryTo').value;
 
-            // Basic validation for required fields
+            // تم نقل هذا التحقق إلى validateAndNextStep و checkValidity
+            // ولكن سنبقيه هنا كتحقق نهائي قبل الإرسال الفعلي لـ Firebase
             if (!fullName || !jobTitle || !jobLocation || !experienceYears || !salaryFrom || !salaryTo || !profileImageFile) {
                 alert('يرجى ملء جميع الحقول المطلوبة ورفع صورة الملف الشخصي.');
                 return;
@@ -373,7 +410,7 @@
                 window.location.href = 'available_employees.html'; 
             } catch (e) {
                 console.error("Error adding document or uploading files: ", e);
-                alert('حدث خطأ أثناء إرسال البيانات. يرجى المحاولة مرة أخرى.');
+                alert('حدث خطأ أثناء إرسال البيانات. يرجى المحاولة مرة أخرى: ' + e.message); // عرض رسالة الخطأ للمستخدم
             }
         }
     </script>
